tests/ui/link-native-libs/link-attr-validation-early.stderr
error[E0539]: malformed `link` attribute input
  --> $DIR/link-attr-validation-early.rs:2:1
   |
LL | #[link]
   | ^^^^^^^ expected this to be a list
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/items/external-blocks.html#the-link-attribute>

error[E0539]: malformed `link` attribute input
  --> $DIR/link-attr-validation-early.rs:3:1
   |
LL | #[link = "foo"]
   | ^^^^^^^-------^
   |        |
   |        expected this to be a list
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/items/external-blocks.html#the-link-attribute>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0539`.
